# light-engine

./: .clang-format  CMakeLists.txt  LICENSE  README.md
LightEngineCore/: CMakeLists.txt
LightEngineCore/headers/Engine/: Application.h  Event.h  Log.h
LightEngineCore/headers/Engine/Utils/: test.h
LightEngineCore/src/Engine/: Application.cpp  Window.cpp  Window.h
LightEngineCore/src/Engine/Utils/: test.cpp
LightEngineEditor/: CMakeLists.txt
LightEngineEditor/src/: main.cpp
